[project]
name = "playground"
version = "0.1.0"
description = "A monorepo playground"
requires-python = ">=3.11"
dependencies = [
    "fighter",
    "renamer",
    "query-clustering",
]

[tool.uv.workspace]
members = [
    "packages/fighter",
    "packages/renamer",
    "packages/query-clustering",
]

[tool.uv]
# Global development dependencies
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[tool.uv.sources]
fighter = { workspace = true }
renamer = { workspace = true }
query-clustering = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true